--- a/blog/entries/templates/entries/entry_detail.html
+++ b/blog/entries/templates/entries/entry_detail.html
@@ -1,6 +1,14 @@
-<article>
-    <h2>{{ entry.date_created|date:'Y-m-d H:i' }}</h2>
-    <h3>{{ entry.title }}</h3>
-    <p>{{ entry.content }}</p>
- </article>
+{% extends "entries/base.html" %}
  
+{% block content %}
+ 
+   <article>
+       <h2>{{ entry.date_created|date:'Y-m-d H:i' }}</h2>
+       <h3>{{ entry.title }}</h3>
+       <p>{{ entry.content }}</p>
+   </article>
+   <p>
+        <a href="{% url 'entry-update' entry.id %}">Редактировать</a>
+        <a href="{% url 'entry-delete' entry.id %}">Удалить</a>
+    </p>
+{% endblock %}
