--- a/blog/entries/templates/entries/base.html
+++ b/blog/entries/templates/entries/base.html
@@ -6,7 +6,7 @@
    <link rel="stylesheet" href="{% static 'css/diary.css' %}">
 </head>
 <body>
-   <h1><a href="/">Привет, читатель!</a></h1>
+   <h1><a href="/">Добро пожаловать в мой блог, читатель!</a></h1>
  
    {% block content %}{% endblock %}
 </body>
