--- a/blog/entries/static/css/diary.css
+++ b/blog/entries/static/css/diary.css
@@ -1,12 +1,10 @@
 * {
     box-sizing: border-box;
  }
-  
  body {
     font-family: sans-serif;
     font-size: 18px;
  }
-  
  a {
     color: inherit;
  }
@@ -52,18 +50,14 @@
     max-width: 36rem;
     color: dimgray;
  }
-  
  em {
     font-style: normal;
     font-weight: bold;
  }
-  
  /* Form */
-  
  label {
     display: block;
  }
-  
  button,
  textarea,
  input {
@@ -94,4 +88,7 @@
  .Saturday,
  .Sunday {
     background-color: lightsalmon;
+ }
+ form#post{
+   width: 100% solid rgb(176, 255, 229);
  }
