--- a/blog/entries/templates/entries/entry_detail.html
+++ b/blog/entries/templates/entries/entry_detail.html
@@ -4,8 +4,10 @@
  
    <article>
        <h2>{{ entry.date_created|date:'Y-m-d H:i' }}</h2>
-       <h3>{{ entry.title }}</h3>
-       <p>{{ entry.content }}</p>
+        <div class="block">
+            <h3>{{ entry.title }}</h3>
+            <p>{{ entry.content }}</p>
+        </div>
    </article>
    <p>
         <a href="{% url 'entry-update' entry.id %}">Редактировать</a>
